--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "laravel/pail": "^1.2.2",
         "laravel/pint": "^1.22",
         "laravel/sail": "^1.41",
+        "mll-lab/laravel-graphql-playground": "^1.1",
         "mockery/mockery": "^1.6",
         "nunomaduro/collision": "^8.6",
         "phpunit/phpunit": "^11.5.3",
